# wave-crispr-signal

./: .gitignore  .pre-commit-config.yaml  ACADEMIC_WHITE_PAPER.md  AGENTS.md  CLAUDE.md  DICOM_ANALYSIS_REPORT.md  DICOM_INVENTORY_ANALYSIS.json  EMPIRICAL_FINDINGS_REPORT.md  FALSIFICATION_REPORT.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  ISSUE50_IMPLEMENTATION_SUMMARY.md  ISSUE_34_RESOLUTION_SUMMARY.md  MRI_ANALYSIS_IMPLEMENTATION_SUMMARY.md  Makefile  QUANTUM_ENTANGLEMENT_IMPLEMENTATION_SUMMARY.md  QUANTUM_ENTANGLEMENT_QUASICRYSTAL_RESEARCH.md  README.md  Z5D_FALSIFICATION_SUMMARY.md  app.py  bin_resonance_test.py  bio_v_arbitrary.py  corrected_validation.py  crispr_3d_visualizations.py  demo_dna_storage_hypothesis.py  demo_invariant_features.py  demo_topological_analysis.py  demo_z_enhancement.py  dna_storage_hypothesis.py  enhanced_bio_analysis.py  experimental_validation.py  falsification_experiments.py  falsification_results.json  fus_enhancer.py  generate_static_3d_plots.py  invariant_features.py  invariant_validation.py  molecular_dynamics_framework.py  mri_enhancement_cli.py  pain_management_application.py  (+28 more)
.claude/: README.md  claude_instructions_crispr_wave_signal.md  settings.json
.github/: CODEOWNERS  REPOSITORY_POLICY.md  copilot-instructions.md  copilot-instructions.yml  pull_request_template.md
.grok/: grok_instructions_crispr_wave_signal.md
3d_plots/: README.md
ISSUE_TEMPLATE/: exploring_signals.md
applications/: __init__.py  crispr_cli.py  crispr_guide_designer.py  crispr_integrated_pipeline.py  crispr_ncbi_fetcher.py  crispr_visualization.py  (+10 more)
(+3233 files in other folders)
