[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-crispr-signal"
version = "1.0.0"
description = "A computational biology tool that applies Fourier-based signal processing to DNA sequences"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Wave CRISPR Signal Team"}
]

[tool.ruff]
extend-exclude = ["notebooks/"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Allow necessary import organization for reorganized structure
ignore = ["E402"]  # Module level import not at top of file

# Allow star imports in specific files if needed
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # Allow path setup in test files
"tools/*" = ["E402"]  # Allow path setup in tool files